--- a/css/style.css
+++ b/css/style.css
@@ -1,101 +1,287 @@
 html {
   scroll-behavior: smooth;
 }
+
 body {
-  /* font-family: "Advent Pro", sans-serif; */
-  font-family: "Dosis", sans-serif;
-  background-image: radial-gradient(
-    circle,
-    #141414,
-    #131313,
-    #131212,
-    #121211,
-    #111110
-  );
+  font-family: "Libre Franklin", sans-serif;
+  background: #010c24;
   color: #fffffb;
 }
-
-/* MAIN */
-#main {
-  margin-top: 50px;
+section {
+  margin-top: 120px;
 }
-.main-h1 {
+h1 {
+  font-weight: 900;
+  letter-spacing: 3.9px;
+  font-size: 2.5rem;
+  margin-top: 20px;
+}
+h2.section-header {
   font-weight: 700;
-  letter-spacing: 1.9px;
-  line-height: 1.8;
   font-size: 2.2rem;
+  color: #fff;
 }
-.sub-h1 {
-  font-weight: 700;
-  letter-spacing: 1.9px;
-  line-height: 1.8;
-  font-size: 1.7rem;
+/* MOBILE NAV */
+#mobile-nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  min-height: 100vh;
+  background: #010c24;
+  z-index: 99999999999999999 !important;
+  transition: 0.4s;
+  margin-left: -100vw;
 }
+.fa-times {
+  position: absolute;
+  top: 50px;
+  right: 30px;
+  color: #fff;
+  font-size: 35px;
+}
+#mobile-toggler {
+  width: 20px;
+  height: 4px;
+  background: #fff;
+  margin: 20px 0 0 20px;
+  position: absolute;
+  top: 40px;
+  right: 90px;
+  font-size: 45px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#mobile-toggler:before {
+  display: block;
+  content: "";
+  width: 28px;
+  height: 4px;
+  box-shadow: 0 -8px 0 0 #fff, 0 8px 0 0 #fff;
+}
+.mobile__navUl li {
+  font-size: 35px;
+  margin: 30px 0;
+  font-weight: 600;
+  letter-spacing: 1.7px;
+}
+.mobile__navUl li a {
+  text-decoration: none;
+  color: #b6f7f7;
+}
+.mobile__navUl li .btn {
+  background: aqua;
+  color: #010c24;
+  padding: 10px 20px;
+  font-size: 30px;
+}
+.mobile__navUl li .btn a {
+  color: #010c24;
+}
+/* NAV */
 .links-ul {
   margin-top: 20px;
   list-style: none;
   padding: 0;
-  font-family: "Taviraj", serif;
 }
 .links-ul li {
   display: inline;
-  text-decoration: underline;
   margin: 0 10px;
 }
 .links-ul li a {
   color: #fffffb;
+  text-decoration: none;
 }
-p {
-  font-size: 19px;
-  line-height: 32px;
+.links-ul li .btn {
+  background: aqua;
+  color: #010c24;
+  padding: 10px 20px;
 }
-.skills {
-  border: 2px solid rgba(128, 128, 128, 0.315);
-}
-.skills li i {
-  font-size: 40px;
-  width: 40px;
-}
-.iconify {
-  font-size: 40px !important;
-}
-a.social-link i {
-  text-decoration: none !important;
-  font-size: 20px;
-  padding: 10px;
-  transition: 0.3s ease-in-out;
-}
-a.social-link:hover {
-  opacity: 0.8;
+.links-ul li .btn a {
+  color: #010c24;
 }
 
+/* MAIN */
+#main {
+  min-height: 90vh;
+}
+#main p {
+  font-size: 30px;
+  line-height: 1.4;
+  margin-top: 30px;
+}
+#main .btn {
+  width: 200px;
+  background: transparent;
+  height: 80px;
+  border: 4px solid #1e5f74;
+  border-radius: 10px;
+  font-size: 19px;
+  color: rgb(58, 252, 252);
+  transition: 0.3s ease-in-out all;
+  margin-top: 10px;
+}
+#main .btn:hover {
+  color: rgb(87, 249, 249);
+  border-color: rgb(58, 252, 252);
+}
+#main .btn a {
+  color: inherit;
+  text-decoration: none;
+}
+#main .btn i {
+  font-size: 14px;
+  padding-left: 5px;
+}
+
+/* About */
+/* #about-me {
+  margin-bottom: 800px;
+} */
+#about-me p {
+  font-size: 16px;
+  line-height: 1.8;
+  color: #ecf4f3;
+}
+#about-me .stacks .list-unstyled li {
+  font-size: 18px;
+  margin-bottom: 4px;
+  letter-spacing: 1.9px;
+}
+#about-me .stacks h2 {
+  font-size: 2, 1rem;
+  font-weight: 800;
+  letter-spacing: 1.2px;
+  color: #b6f7f7;
+}
+
+/* PROJECTS */
 .project {
-  border: 2px solid #646363ce;
-  border-radius: 5px;
-  min-height: 200px;
-  padding: 10px;
+  margin-bottom: 100px;
 }
-.project-stack {
-  font-size: 0.75rem;
-  font-weight: 400;
+.project h2 {
+  font-weight: 700;
+  font-size: 1.9rem;
+  color: aqua;
+}
+.project a {
+  color: #fff;
+  text-decoration: underline;
+}
+.project__img {
+  position: relative;
+  cursor: pointer;
+}
+.project__img:hover .overlay {
+  background: rgba(1, 12, 36, 0.7);
+  transition: 0.5s ease-in-out all;
+  opacity: 0;
+}
+.project__img .overlay {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  color: orange;
-  background-color: rgb(27, 0, 0);
-}
-.name {
-  color: orange !important;
-}
-.container-fluid#loading {
-  background-color: #000000;
-  position: fixed;
   top: 0;
   right: 0;
-  bottom: 0;
   left: 0;
-  height: 100vh;
+  bottom: 0;
+  width: 100%;
+  height: 100v h;
+  background: rgba(1, 12, 36, 0.6);
+  opacity: 1;
 }
-.container-fluid#loading .row {
-  height: 100%;
+.project__img img {
+  border: 3px solid aqua;
+  border-radius: 20px;
+}
+.fa-external-link-alt {
+  color: #fff;
+  font-size: 25px;
+}
+.fa-external-link-alt:hover {
+  color: aqua;
+}
+.project-tag {
+  padding: 5px 8px;
+  font-weight: 300;
+  letter-spacing: 1.7px;
+  font-size: 14px;
+  color: #d8f4f6;
+  background: #ff7e67;
+  margin: 5px;
+  display: inline-block;
+}
+.connect {
+  background: #013a3e;
+  color: #fff;
+  text-align: center;
+  box-shadow: 4px 5px 4px 5px rgba(213, 209, 209, 0.023);
+  margin-bottom: 40px;
+}
+.connect .social-link {
+  font-size: 42px;
+  margin: 10px 20px;
+  color: #ff7e67;
+}
+@media only screen and (max-width: 400px) {
+  #main {
+    margin-top: 30px;
+  }
+  #main h2 {
+    font-size: 19px;
+    font-weight: 300;
+  }
+  h1 {
+    font-size: 1.6rem;
+  }
+  h2 {
+    font-size: 1.2rem !important;
+  }
+  h2.section-header {
+    font-size: 1.7rem !important;
+  }
+  #main p {
+    font-size: 20px;
+    font-weight: 300;
+  }
+  #main .btn {
+    height: 60px;
+    width: 170px;
+    padding-top: 10px;
+  }
+  .project {
+    margin-bottom: 100px !important;
+  }
+  #mobile-toggler {
+    right: 30px;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  #main {
+    margin-top: 0px;
+  }
+  h1 {
+    font-size: 3.2rem;
+  }
+  h2.section-header {
+    font-weight: 700;
+    font-size: 3.2rem;
+    color: #fff;
+    margin-left: 200px;
+  }
+  h2.section-header::before {
+    content: "";
+    position: absolute;
+    top: 40%;
+    left: 0;
+    width: 200px;
+    height: 1px;
+    background: aqua;
+    opacity: 0.4;
+  }
+  .project {
+    margin-bottom: 150px !important;
+  }
 }
