--- a/css/style.css
+++ b/css/style.css
@@ -142,18 +142,19 @@ h2.section-header {
   margin-bottom: 800px;
 } */
 #about-me p {
-  font-size: 20px;
+  font-size: 15.5px;
   line-height: 1.8;
   color: #ecf4f3;
   text-align: justify;
 }
 #about-me .stacks .list-unstyled li {
-  font-size: 18px;
+  font-size: 15px;
   margin-bottom: 4px;
   letter-spacing: 1.9px;
+  font-weight: 500;
 }
 #about-me .stacks h2 {
-  font-size: 2, 1rem;
+  font-size: 2.1rem;
   font-weight: 800;
   letter-spacing: 1.2px;
   color: #b6f7f7;
