--- a/jsminna/contact_list/style.css
+++ b/jsminna/contact_list/style.css
@@ -31,6 +31,7 @@ body {
   box-shadow: 1px 3px 20px 1px rgba(0, 0, 0, 0.09);
   cursor: pointer;
   transition: 0.3s;
+  color: #000;
 }
 .contact-item i.fa-phone:hover,
 .contact-item i.fa-phone:focus {
