--- a/css/style.css
+++ b/css/style.css
@@ -108,15 +108,18 @@ h2.section-header {
 #main {
   min-height: 90vh;
 }
+#main h1 {
+  font-size: 37px;
+}
 #main p {
-  font-size: 30px;
-  line-height: 1.4;
+  font-size: 15px;
+  line-height: 1.9;
   margin-top: 30px;
 }
 #main .btn {
   width: 200px;
   background: transparent;
-  height: 80px;
+  height: 60px;
   border: 4px solid #1e5f74;
   border-radius: 10px;
   font-size: 19px;
